--- a/examples/simple-passthrough-example/docker-compose.yaml
+++ b/examples/simple-passthrough-example/docker-compose.yaml
@@ -66,7 +66,7 @@ services:
                     endpoint: "kafka-1:44444" 
           routes:
             - name: passthrough-route
-              endpoint: "host.docker.internal:19092" 
+              endpoint: "localhost:19092" 
               brokerIdentificationStrategy:
                 type: port 
               streamingDomain:
