changed internal ecr repo from gateway to cpc-gateway

--- a/.semaphore/cp_dockerfile_promote.yml
+++ b/.semaphore/cp_dockerfile_promote.yml
@@ -52,13 +52,13 @@ blocks:
     dependencies: []
     task:
       jobs:
-        - name: Promote confluentinc/gateway ubi9 AMD
+        - name: Promote confluentinc/cpc-gateway ubi9 AMD
           env_vars:
             - name: DOCKER_IMAGE
-              value: confluentinc/gateway
+              value: confluentinc/cpc-gateway
           commands:
             - export OS_TYPE="ubi9"
-            - export DOCKER_REPO="confluentinc/gateway"
+            - export DOCKER_REPO="confluentinc/cpc-gateway"
             - if [[ ! "$OS_TYPE" ]]; then export OS_TAG=""; elif [[ "$OS_TYPE" =~ $PROMOTE_OS_TYPE* ]]; then export OS_TAG="-$OS_TYPE"; fi
             - export INTERNAL_IMAGE_TAG="$BRANCH_TAG-$PACKAGING_BUILD_NUMBER$OS_TAG$AMD_ARCH"
             - export PROMOTED_TAG="$PROMOTED_TAG_PREFIX$OS_TAG$AMD_ARCH"
@@ -87,13 +87,13 @@ blocks:
     dependencies: []
     task:
       jobs:
-        - name: Promote confluentinc/gateway ubi9 ARM
+        - name: Promote confluentinc/cpc-gateway ubi9 ARM
           env_vars:
             - name: DOCKER_IMAGE
-              value: confluentinc/gateway
+              value: confluentinc/cpc-gateway
           commands:
             - export OS_TYPE="ubi9"
-            - export DOCKER_REPO="confluentinc/gateway"
+            - export DOCKER_REPO="confluentinc/cpc-gateway"
             - if [[ ! "$OS_TYPE" ]]; then export OS_TAG=""; elif [[ "$OS_TYPE" =~ $PROMOTE_OS_TYPE* ]]; then export OS_TAG="-$OS_TYPE"; fi
             - export INTERNAL_IMAGE_TAG="$BRANCH_TAG-$PACKAGING_BUILD_NUMBER$OS_TAG$ARM_ARCH"
             - export PROMOTED_TAG="$PROMOTED_TAG_PREFIX$OS_TAG$ARM_ARCH"
@@ -122,14 +122,14 @@ blocks:
     dependencies: ["Promote AMD", "Promote ARM"]
     task:
       jobs:
-        - name: Create Manifest confluentinc/gateway ubi9
+        - name: Create Manifest confluentinc/cpc-gateway ubi9
           env_vars:
             - name: DOCKER_IMAGE
-              value: confluentinc/gateway
+              value: confluentinc/cpc-gateway
           commands:
             - export OS_TYPE="ubi9"
             - if [[ ! "$OS_TYPE" ]]; then export OS_TAG=""; elif [[ "$OS_TYPE" =~ $PROMOTE_OS_TYPE* ]]; then export OS_TAG="-$OS_TYPE"; fi
-            - export DOCKER_REPO="confluentinc/gateway"
+            - export DOCKER_REPO="confluentinc/cpc-gateway"
             - export PROMOTED_TAG="$PROMOTED_TAG_PREFIX$OS_TAG"
             - docker manifest create $DOCKER_REPO:$PROMOTED_TAG $DOCKER_REPO:$PROMOTED_TAG$AMD_ARCH $DOCKER_REPO:$PROMOTED_TAG$ARM_ARCH
             - docker manifest push $DOCKER_REPO:$PROMOTED_TAG
