--- a/.semaphore/cp_dockerfile_build.yml
+++ b/.semaphore/cp_dockerfile_build.yml
@@ -78,7 +78,7 @@ global_job_config:
       - export DOCKER_UPSTREAM_REGISTRY=$DOCKER_PROD_REGISTRY
       - export LATEST_TAG=$BRANCH_TAG-latest
       - export DOCKER_UPSTREAM_TAG="$LATEST_TAG"
-      - export DOCKER_REPOS="confluentinc/gateway"
+      - export DOCKER_REPOS="confluentinc/cpc-gateway"
       - export MAVEN_EXTRA_ARGS=""
       - export DOCKER_DEV_TAG="dev-$BRANCH_TAG-$BUILD_NUMBER"
       - export AMD_ARCH=.amd64
@@ -124,19 +124,19 @@ blocks:
             - . publish-test-results
             - artifact push workflow target/test-results
             - artifact push workflow target --destination target-AMD
-  - name: Deploy AMD confluentinc/gateway
+  - name: Deploy AMD confluentinc/cpc-gateway
     dependencies: ["Build, Test, & Scan AMD"]
     run:
       when: "branch = 'master' or branch =~ '^[0-9]+\\.[0-9]+\\.x$' or branch =~ '^[0-9]+\\.[0-9]+\\.[0-9]+(-cp[0-9]+)?(-rc[0-9]+)?$'"
     task:
       jobs:
-        - name: Deploy AMD confluentinc/gateway ubi9
+        - name: Deploy AMD confluentinc/cpc-gateway ubi9
           env_vars:
             - name: DOCKER_IMAGE
               value: confluentinc/gateway
           commands:
             - export OS_TAG="-ubi9"
-            - export PROD_IMAGE_NAME=${DOCKER_PROD_REGISTRY}confluentinc/gateway
+            - export PROD_IMAGE_NAME=${DOCKER_PROD_REGISTRY}confluentinc/cpc-gateway
             - export GIT_COMMIT_TAG=$GIT_COMMIT$OS_TAG$AMD_ARCH
             - export BRANCH_BUILD_TAG=$BRANCH_TAG-$BUILD_NUMBER$OS_TAG$AMD_ARCH
             - export DEV_IMAGE_FULL=${DOCKER_DEV_REGISTRY}confluentinc/gateway:$DOCKER_DEV_TAG$OS_TAG$AMD_ARCH
@@ -195,13 +195,13 @@ blocks:
         - name: Deploy ARM confluentinc/gateway ubi9
           env_vars:
             - name: DOCKER_IMAGE
-              value: confluentinc/gateway
+              value: confluentinc/cpc-gateway
           commands:
             - export OS_TAG="-ubi9"
-            - export PROD_IMAGE_NAME=${DOCKER_PROD_REGISTRY}confluentinc/gateway
+            - export PROD_IMAGE_NAME=${DOCKER_PROD_REGISTRY}confluentinc/cpc-gateway
             - export GIT_COMMIT_TAG=$GIT_COMMIT$OS_TAG$ARM_ARCH
             - export BRANCH_BUILD_TAG=$BRANCH_TAG-$BUILD_NUMBER$OS_TAG$ARM_ARCH
-            - export DEV_IMAGE_FULL=${DOCKER_DEV_REGISTRY}confluentinc/gateway:$DOCKER_DEV_TAG$OS_TAG$ARM_ARCH
+            - export DEV_IMAGE_FULL=${DOCKER_DEV_REGISTRY}confluentinc/cpc-gateway:$DOCKER_DEV_TAG$OS_TAG$ARM_ARCH
             - docker pull $DEV_IMAGE_FULL
             - docker tag $DEV_IMAGE_FULL $PROD_IMAGE_NAME:$GIT_COMMIT_TAG
             - docker tag $DEV_IMAGE_FULL $PROD_IMAGE_NAME:$BRANCH_BUILD_TAG
@@ -217,7 +217,7 @@ blocks:
             - docker tag $DEV_IMAGE_FULL $PROD_IMAGE_NAME:$LATEST_PUSH_TAG
             - docker push $PROD_IMAGE_NAME:$LATEST_PUSH_TAG
   - name: Create Manifest
-    dependencies: ["Deploy AMD confluentinc/gateway", "Deploy ARM confluentinc/gateway"]
+    dependencies: ["Deploy AMD confluentinc/cpc-gateway", "Deploy ARM confluentinc/cpc-gateway"]
     run:
       when: "branch = 'master' or branch =~ '^[0-9]+\\.[0-9]+\\.x$' or branch =~ '^[0-9]+\\.[0-9]+\\.[0-9]+(-cp[0-9]+)?(-rc[0-9]+)?$'"
     task:
