--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -6,10 +6,10 @@
 
   <parent>
     <groupId>io.confluent.gateway-images</groupId>
-    <artifactId>gateway-images-parent</artifactId>
+    <artifactId>cpc-gateway-images-parent</artifactId>
     <version>1.0.0-0</version>
   </parent>
-  <artifactId>gateway</artifactId>
+  <artifactId>cpc-gateway</artifactId>
   <name>Gateway Docker Image</name>
   <properties>
     <docker.skip-build>false</docker.skip-build>
