updated env with fallbacks

--- a/examples/authentication-swapping/docker-compose.yaml
+++ b/examples/authentication-swapping/docker-compose.yaml
@@ -75,14 +75,14 @@ services:
  # In a production environment, you should use TLS encryption from client to gateway and gateway to broker. And use SNI routing for routing requests to the correct broker.
 
   gateway:
-    image: "${GATEWAY_IMAGE}"
+    image: "${GATEWAY_IMAGE:-confluentinc/cpc-gateway:latest}"
     container_name: gateway
     depends_on:
       - kafka-1
       - vault
     volumes:
-      - ${GATEWAY_JAAS_CONF_FOR_GW_AUTHN}:/etc/gateway/config/jaas-config-for-gw-authn.conf # loading JAAS config for SASL authentication at Gateway
-      - ${GATEWAY_JAAS_TEMPLATE_FOR_GW_SWAPPING}:/etc/gateway/config/jaas-template-for-gw-swapping.conf # loading JAAS template for SASL authentication at Gateway
+      - ${GATEWAY_JAAS_CONF_FOR_GW_AUTHN:-./jaas-config-for-gw-authn.conf}:/etc/gateway/config/jaas-config-for-gw-authn.conf # loading JAAS config for SASL authentication at Gateway
+      - ${GATEWAY_JAAS_TEMPLATE_FOR_GW_SWAPPING:-./jaas-template-for-gw-swapping.conf}:/etc/gateway/config/jaas-template-for-gw-swapping.conf # loading JAAS template for SASL authentication at Gateway
     environment:
       GATEWAY_CONFIG: | 
         gateway:
