--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
     gateway:
         hostname: gateway
-        image: ${GATEWAY_DOCKER_IMAGE}
+        image: ${GATEWAY_DOCKER_IMAGE:-confluentinc/cpc-gateway:latest}
         ports:
-            - "9192:9192"
-            - "9193:9193"
-            - "9194:9194"
-            - "9195:9195"
+            - "9192:9192" # bootstrap
+            - "9193:9193" # nodeId: 0
+            - "9194:9194" # nodeId: 1
+            - "9195:9195" # nodeId: 2
             - "19095:19095"  # Admin port
         environment:
           GATEWAY_CONFIG: |
