--- a/.semaphore/cp_dockerfile_build.yml
+++ b/.semaphore/cp_dockerfile_build.yml
@@ -139,7 +139,7 @@ blocks:
             - export PROD_IMAGE_NAME=${DOCKER_PROD_REGISTRY}confluentinc/cpc-gateway
             - export GIT_COMMIT_TAG=$GIT_COMMIT$OS_TAG$AMD_ARCH
             - export BRANCH_BUILD_TAG=$BRANCH_TAG-$BUILD_NUMBER$OS_TAG$AMD_ARCH
-            - export DEV_IMAGE_FULL=${DOCKER_DEV_REGISTRY}confluentinc/gateway:$DOCKER_DEV_TAG$OS_TAG$AMD_ARCH
+            - export DEV_IMAGE_FULL=${DOCKER_DEV_REGISTRY}confluentinc/cpc-gateway:$DOCKER_DEV_TAG$OS_TAG$AMD_ARCH
             - docker pull $DEV_IMAGE_FULL
             - docker tag $DEV_IMAGE_FULL $PROD_IMAGE_NAME:$GIT_COMMIT_TAG
             - docker tag $DEV_IMAGE_FULL $PROD_IMAGE_NAME:$BRANCH_BUILD_TAG
@@ -183,7 +183,7 @@ blocks:
             - . publish-test-results
             - artifact push workflow target/test-results
             - artifact push workflow target --destination target-ARM
-  - name: Deploy ARM confluentinc/gateway
+  - name: Deploy ARM confluentinc/cpc-gateway
     dependencies: ["Build & Test ARM"]
     run:
       when: "branch = 'master' or branch =~ '^[0-9]+\\.[0-9]+\\.x$' or branch =~ '^[0-9]+\\.[0-9]+\\.[0-9]+(-cp[0-9]+)?(-rc[0-9]+)?$'"
@@ -192,7 +192,7 @@ blocks:
         machine:
           type: s1-prod-ubuntu24-04-arm64-1
       jobs:
-        - name: Deploy ARM confluentinc/gateway ubi9
+        - name: Deploy ARM confluentinc/cpc-gateway ubi9
           env_vars:
             - name: DOCKER_IMAGE
               value: confluentinc/cpc-gateway
