--- a/examples/sni-based-routing/client.properties
+++ b/examples/sni-based-routing/client.properties
@@ -9,3 +9,4 @@ ssl.truststore.password=confluent
 ssl.keystore.location=/etc/kafka/client.keystore.jks
 ssl.keystore.password=confluent
 ssl.key.password=confluent
+ssl.endpoint.identification.algorithm=
