--- a/gateway-version-compatability-test-tool/docker-compose.yml
+++ b/gateway-version-compatability-test-tool/docker-compose.yml
@@ -14,6 +14,14 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-server:9092
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
+      
+      # Replication factor for single broker setup
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 1
+      KAFKA_MIN_INSYNC_REPLICAS: 1
 
   gateway:
     image: ${DOCKER_REGISTRY:-}confluentinc/cpc-gateway:latest
