--- a/examples/simple-passthrough-example/gateway.yaml
+++ b/examples/simple-passthrough-example/gateway.yaml
@@ -16,7 +16,7 @@ gateway:
             endpoint: "kafka-1:44444" # <----- kafka internal listener endpoint 
   routes:
     - name: passthrough
-      endpoint: "host.docker.internal:19092"
+      endpoint: "localhost:19092"
       brokerIdentificationStrategy:
         type: port # nodeId starts from 19093 and for nodes starting from 1 to 5
       streamingDomain:
