--- a/service.yml
+++ b/service.yml
@@ -55,6 +55,17 @@ semaphore:
           required: true
           options:
             - 'ubi'
+    - name: version-compatibility-test
+      branch: master
+      at: "0 21 * * 0"    # Sun at 21:00 UTC
+      pipeline_file: .semaphore/version_compatibility_test.yml
+      parameters:
+        - name: KAFKA_SERVER_VERSION
+          required: false
+          description: "Kafka server version to test against, e.g., 8.0.0"
+        - name: KAFKA_CLIENT_VERSION
+          required: false
+          description: "Kafka client version to test against, e.g., 8.0.0"
 code_artifact:
   enable: true
   package_paths:
